--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-library-builder",
-  "version": "0.1.15",
+  "version": "0.0.2",
   "scripts": {
     "clean": "rimraf node_modules/",
     "clean:tmp": "rimraf .tmp/**",
@@ -10,11 +10,15 @@
   "main": "./src/index.js",
   "author": {
     "name": "georgesuveti",
-    "email": "george.suveti@irian.ro"
+    "email": "george.suveti@gmail.com"
   },
   "keywords": [
     "angular"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gsuveti/ng-library-builder.git"
+  },
   "devDependencies": {
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -28,5 +32,4 @@
     "typescript": "^2.5.2",
     "yargs": "^8.0.2"
   }
-
 }
