--- a/demo-web-lib/package.json
+++ b/demo-web-lib/package.json
@@ -1,18 +1,18 @@
 {
   "name": "demo-web-lib",
   "version": "1.0.0",
-  "main": "./src/index.js",
   "author": {
     "name": "georgesuveti",
-    "email": "george.suveti@gmail.com"
+    "email": "george.suveti@irian.ro"
   },
   "dependencies": {
-    "@angular/common": "^4.4.3",
-    "@angular/core": "^4.4.3",
-    "@angular/forms": "^4.4.3",
-    "@angular/http": "^4.4.3",
-    "@angular/platform-browser": "4.4.3",
-    "@angular/router": "^4.4.3",
+    "@angular/common": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/router": "^4.3.6",
+    "@ngx-translate/core": "^8.0.0",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.17"
   }
