--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "library",
     "builder"
   ],
+  "scripts": {
+    "prepublish": "npm version patch"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/gsuveti/ng-library-builder.git"
