--- a/demo-web-lib/package.json
+++ b/demo-web-lib/package.json
@@ -5,6 +5,9 @@
     "name": "georgesuveti",
     "email": "george.suveti@irian.ro"
   },
+  "scripts": {
+    "build": "ng-lb --rootDir ./"
+  },
   "dependencies": {
     "@angular/common": "^4.3.6",
     "@angular/core": "^4.3.6",
@@ -13,6 +16,7 @@
     "@angular/platform-browser": "^4.3.6",
     "@angular/router": "^4.3.6",
     "@ngx-translate/core": "^8.0.0",
+    "ng-library-builder": "^0.0.7",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.17"
   }
