--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "builder"
   ],
   "scripts": {
-    "prepublish": "npm version patch"
+    "prepublishOnly": "npm version patch"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "gulp-run": "^1.7.1",
     "gulp-sass": "^3.1.0",
     "moment": "^2.18.1",
+    "shelljs": "^0.7.8",
     "typescript": "^2.5.2",
     "yargs": "^8.0.2"
   }
