--- a/demo-web-lib/package.json
+++ b/demo-web-lib/package.json
@@ -16,6 +16,7 @@
     "@angular/platform-browser": "^4.3.6",
     "@angular/router": "^4.3.6",
     "@ngx-translate/core": "^8.0.0",
+    "material-colors": "^1.2.5",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.17"
   },
