--- a/demo-web-lib/package.json
+++ b/demo-web-lib/package.json
@@ -9,15 +9,21 @@
     "build": "ng-lb --rootDir ./"
   },
   "dependencies": {
-    "@angular/common": "^4.3.6",
-    "@angular/core": "^4.3.6",
-    "@angular/forms": "^4.3.6",
-    "@angular/http": "^4.3.6",
-    "@angular/platform-browser": "^4.3.6",
-    "@angular/router": "^4.3.6",
+    "@angular/animations": "^5.1.0",
+    "@angular/common": "^5.1.0",
+    "@angular/compiler": "^5.1.0",
+    "@angular/compiler-cli": "^5.1.0",
+    "@angular/core": "^5.1.0",
+    "@angular/forms": "^5.1.0",
+    "@angular/http": "^5.1.0",
+    "@angular/platform-browser": "^5.1.0",
+    "@angular/platform-browser-dynamic": "^5.1.0",
+    "@angular/platform-server": "^5.1.0",
+    "@angular/router": "^5.1.0",
     "@ngx-translate/core": "^8.0.0",
     "material-colors": "^1.2.5",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.5",
+    "typescript": "^2.4.2",
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
