--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ng-library-builder",
   "version": "0.0.17",
   "bin": {
-    "ng-lb": "bin/ng-lb.js"
+    "ng-lb": "src/ng-lb.js"
   },
   "author": {
     "name": "georgesuveti",
@@ -14,24 +14,21 @@
     "builder"
   ],
   "scripts": {
-    "prepublishOnly": "npm version patch"
+    "prepublishOnly": "npm version patch",
+    "build": "node ./src/ng-lb --rootDir=./demo-web-lib --outDir=./demo-web-lib/dist --timestampedVersion"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/gsuveti/ng-library-builder.git"
   },
   "dependencies": {
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-concat-json": "^1.0.0",
-    "gulp-ext-replace": "^0.3.0",
-    "gulp-install": "^1.1.0",
-    "gulp-json-editor": "^2.2.1",
-    "gulp-run": "^1.7.1",
-    "gulp-sass": "^3.1.0",
+    "angular-inline-resources": "^1.3.2",
+    "commander": "^2.12.2",
+    "filehound": "^1.16.2",
+    "fs-extra": "^5.0.0",
     "moment": "^2.18.1",
-    "shelljs": "^0.7.8",
-    "typescript": "^2.5.2",
-    "yargs": "^8.0.2"
+    "node-sass": "^4.7.2",
+    "npm-cmd": "^0.2.0",
+    "recursive-copy": "^2.0.8"
   }
 }
