--- a/package.json
+++ b/package.json
@@ -22,13 +22,21 @@
     "url": "https://github.com/gsuveti/ng-library-builder.git"
   },
   "dependencies": {
+    "@irian/primeng-material": "0.0.0-SNAPSHOT-20180402130710",
     "angular-inline-resources": "^1.3.2",
+    "autoprefixer": "^8.2.0",
     "commander": "^2.12.2",
+    "css-loader": "^0.28.11",
+    "extract-loader": "^2.0.1",
+    "file-loader": "^1.1.11",
     "filehound": "^1.16.2",
     "fs-extra": "^5.0.0",
     "moment": "^2.18.1",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.8.3",
     "npm-cmd": "^0.2.0",
-    "recursive-copy": "^2.0.8"
+    "recursive-copy": "^2.0.8",
+    "sass-loader": "^6.0.7",
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13"
   }
 }
