--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "prepublishOnly": "npm version patch",
-    "build": "node ./src/ng-lb --rootDir=./demo-web-lib --outDir=./demo-web-lib/dist --timestampedVersion"
+    "build": "node ./src/ng-lb --rootDir=./demo-web-lib --outDir=./dist "
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "filehound": "^1.16.2",
     "fs-extra": "^5.0.0",
     "moment": "^2.18.1",
+    "node": "^10.6.0",
     "node-sass": "^4.8.3",
     "npm-cmd": "^0.2.0",
     "recursive-copy": "^2.0.8",
