--- a/demo-web-app/src/tsconfig.app.json
+++ b/demo-web-app/src/tsconfig.app.json
@@ -12,6 +12,6 @@
   ],
   "include": [
     "./",
-    "../node_modules/@ng-library-builder/**/*.ts"
+    "../node_modules/@irian-ro/demo-web-lib/app/**/*.ts"
   ]
 }
